--- a/source/assets/stylesheets/components/_icons.scss
+++ b/source/assets/stylesheets/components/_icons.scss
@@ -1,3 +1,18 @@
+.icon {
+  width: 24px;
+  height: 24px;
+  fill: $gray;
+  &:hover,
+  &:focus {
+    fill: $black;
+  }
+}
+
+.icon-link {
+  width: 30px;
+  height: 30px;
+}
+
 .icon-ruby {
   border-style: solid;
   border-color: transparent transparent $red;
